# kateth

./: Cargo.toml  README.md  build.rs  kateth.h
.github/workflows/: ci.yaml
benches/: kzg.rs
src/: blob.rs  bls.rs  bytes.rs  ffi.rs  kzg.rs  lib.rs  math.rs
src/kzg/: commitment.rs  mod.rs  poly.rs  proof.rs  setup.rs  spec.rs
