[package]
name = "kateth"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
criterion = "0.5.1"
hex = { version = "0.4.3", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.189", features = ["derive"], optional = true }
serde_json = { version = "1.0.107", optional = true }
serde_yaml = { version = "0.9.25", optional = true }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"

[features]
default = []
rand = ["dep:rand"]
serde = ["dep:hex", "dep:serde", "dep:serde_json", "dep:serde_yaml"]

[[bench]]
name = "kzg"
harness = false
required-features = ["rand", "serde"]