[package]
name = "kateth"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
hex = "0.4.3"
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
default = []
rand = ["dep:rand"]

[[bench]]
name = "kzg"
harness = false
required-features = ["rand"]